--- a/src/components/NewsFromWall/NewsFromWall.module.css
+++ b/src/components/NewsFromWall/NewsFromWall.module.css
@@ -6,6 +6,7 @@
   background-color: white;
   scroll-snap-type: x mandatory;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-padding: 20px;
   height: 500px;
 
@@ -64,8 +65,8 @@
   background-color: white;
   border: none;
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 50px;
+  width: 50px;
 }
 
 .next {
