--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   height: 50px;
-  background-color: white;
-  padding-inline: 20px;
+  background-color: #d9d9d9;
+  padding-inline: 50px;
 
   position: fixed;
   top: 0;
@@ -16,12 +16,22 @@
 .Header nav {
   display: flex;
   align-items: center;
-  gap: 10px;
+  font-size: 32px;
+  gap: 32px;
+}
+
+.Header a {
+  text-decoration: none;
 }
 
 .Header img {
   display: inline-block;
-  max-width: 40px;
-  max-height: 40px;
+  max-width: 65px;
   border-radius: 50%;
+}
+
+@media (min-width: 1920px) {
+  .Header {
+    height: 100px;
+  }
 }
