--- a/client/src/components/BookAction/BookAction.module.css
+++ b/client/src/components/BookAction/BookAction.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   background-color: #d9d9d9;
   width: 100%;
-  height: 500px;
+  height: 400px;
   border-radius: 24px;
   padding: 30px 60px;
 
@@ -18,28 +18,41 @@
 
 .BookAction form {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 32px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 20px;
+
   /* justify-items: center; */
+}
+
+.BookAction form button {
+  background-color: #535353;
+  color: white;
+  border-radius: 8px;
+  border: none;
 }
 
 .BookAction form input:not([type='checkbox']) {
   border: none;
   background-color: #aeaeae;
-  height: 60px;
+  height: 30px;
   border-radius: 8px;
   width: 100%;
 
   font-size: 32px;
   padding: 10px 36px;
+  box-sizing: border-box;
 }
 
 .checkbox {
   display: flex;
   align-items: center;
   font-size: 24px;
-  grid-column: span 3;
-  justify-self: baseline;
+  grid-column: span 4;
+}
+
+.BookAction form span {
+  font-size: 32px;
 }
 
 .checkbox a {
@@ -57,43 +70,72 @@
 @media (max-width: 1600px) {
   .BookAction {
     width: 100%;
+    box-sizing: border-box;
+    height: 350px;
+    padding: 30px 60px;
+  }
+
+  .BookAction form label {
+    font-size: 16px;
   }
 
   .BookAction h1 {
     font-size: 32px;
   }
 
-  .BookAction form input:not([type='checkbox']),
-  .BookAction label {
+  .BookAction form input:not([type='checkbox']) {
+    font-size: 20px;
+    padding: 5px 10px;
+  }
+
+  .BookAction form span {
     font-size: 20px;
   }
 
-  .BookAction form input:not([type='checkbox']) {
-    width: 80%;
-  }
-}
-
-@media (max-width: 1600px) {
-  .BookAction {
-    width: 100%;
-    box-sizing: border-box;
+  .checkbox input {
+    height: 30px;
+    width: 30px;
   }
 
-  .BookAction form input:not([type='checkbox']) {
-    width: 60%;
+  .checkbox {
+    margin: auto;
   }
 }
 
 @media (max-width: 800px) {
+  .BookAction {
+    height: fit-content;
+  }
+
   .BookAction form {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+  }
+
+  .BookAction form button {
+    padding: 10px;
+  }
+
+  .checkbox {
+    grid-column: span 1;
+  }
+
+  .BookAction form input[type='date'] {
+    grid-row: 2;
+  }
+
+  .BookAction form .name {
+    grid-row: 4;
+  }
+
+  .BookAction form span {
+    font-size: 18px;
   }
 
   .BookAction {
     width: 100%;
-    padding: 0;
-    margin-bottom: 132px;
+    padding: 30px;
+    overflow: hidden;
   }
 
   .BookAction form input:not([type='checkbox']) {
