--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,7 +1,8 @@
 .Footer {
   display: flex;
   flex-direction: column;
-  background-color: purple;
+  background-color: #d9d9d9;
+  min-height: 100px;
   color: white;
   padding: 20px;
   text-align: center;
