--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,23 +1,56 @@
 .Header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  height: 50px;
-  background-color: #d9d9d9;
-  padding-inline: 50px;
-
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10;
+  height: 140px;
+}
+
+.headerContent {
+  display: flex;
+  width: 100%;
+  max-width: 1620px;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 50px;
+  margin-block: 13px;
+}
+
+.actionBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 24px;
+}
+
+.actionButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border: 3px solid #d9d9d9;
+  border-radius: 24px;
+  width: 80px;
+  height: 80px;
 }
 
 .Header nav {
+  box-sizing: border-box;
+  border: 3px solid #d9d9d9;
+  height: 80px;
+  padding: 24px;
+  border-radius: 24px;
   display: flex;
   align-items: center;
   font-size: 32px;
   gap: 32px;
+  margin-left: 10%;
 }
 
 .Header a {
@@ -27,18 +60,28 @@
 .Header img {
   display: inline-block;
   max-width: 65px;
-  border-radius: 50%;
-}
-
-@media (min-width: 1920px) {
-  .Header {
-    height: 100px;
-  }
 }
 
 @media (max-width: 1600px) {
+  .Header {
+    height: 75px;
+  }
+
   .Header nav {
-    font-size: 20px;
+    height: 45px;
+    font-size: 18px;
+    border-width: 1px;
+  }
+
+  .actionButton {
+    height: 44px;
+    width: 44px;
+    border-width: 1px;
+  }
+
+  .headerContent {
+    height: 50px;
+    margin-block: 5px;
   }
 
   .Header img {
