--- a/client/src/components/MainBlock/MainBlock.module.css
+++ b/client/src/components/MainBlock/MainBlock.module.css
@@ -1,61 +1,105 @@
 .MainBlock {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 18px;
-  /* background-color: white; */
-  min-height: 100px;
-  /* padding: 20px; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1.4fr;
+  grid-template-rows: 130px 140px 150px repeat(2, 160px) 95px;
+  grid-auto-rows: 1fr;
+  gap: 20px;
+
   transition: all 0.3s ease-in;
   margin-top: 60px;
   scroll-margin-top: 132px;
+  margin-top: 132px;
+}
+
+.link {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 47px;
+  width: 47px;
+  background-color: #828282;
+  border-radius: 50%;
+}
+
+.MainBlock > div {
+  border-radius: 48px;
+}
+
+.firstLineText {
+  display: flex;
+  align-items: end;
+  font-size: 104px;
+  grid-column: span 2;
+}
+
+.firstLineText span {
+  width: fit-content;
+}
+
+.pattern {
+  margin-left: 10px;
+  width: 100%;
+  height: 80%;
+  border-radius: 24px;
+  background-color: #d9d9d9;
+  flex: 1;
+}
+
+.bigBlock {
+  background-color: #d9d9d9;
+  grid-column: 3;
+  grid-row: 1/-1;
+}
+
+.secondLineText {
+  font-size: 120px;
+  grid-column: span 2;
+}
+
+.thirdLineText {
+  font-size: 134px;
+  grid-column: span 2;
+}
+
+.actionButton {
+  grid-column: span 2;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #828282;
+
+  font-size: 40px;
+  color: white;
 }
 
 .games,
 .events,
 .rent {
+  position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 180px;
+  align-items: end;
+  justify-content: left;
+  padding: 30px;
+  box-sizing: border-box;
   border-radius: 24px;
   transition: all 0.3s ease-in-out;
 
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  text-shadow: 0px 0px 8px black;
+  font-size: 40px;
 }
 
 .games {
-  flex: 1;
-  background-image: url('/public//images/boardGames.jpg');
+  background-color: #d9d9d9;
   background-size: cover;
+  grid-row: span 2;
 }
 
 .rent {
-  flex: 1;
   background-color: #d9d9d9;
 }
 
 .events {
-  flex: 1;
   background-color: #d9d9d9;
-}
-
-.opened {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-
-  flex: 8;
-  background-image: none;
-  background-color: #d9d9d9;
-}
-
-.closed span {
-  display: inline-block;
-  transform: rotate(270deg);
 }
 
 .resizeWidget {
@@ -66,14 +110,63 @@
   height: 100%;
 }
 
+@media (max-width: 1920px) {
+  .MainBlock {
+    grid-template-rows: 45px 50px 55px 1fr 1fr 40px;
+    margin-top: 80px;
+    height: 600px;
+  }
+
+  .firstLineText {
+    font-size: 42px;
+  }
+
+  .secondLineText {
+    font-size: 50px;
+  }
+
+  .thirdLineText {
+    font-size: 57px;
+  }
+
+  .games,
+  .events,
+  .rent,
+  .actionButton {
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 780px) {
   .MainBlock {
-    flex-direction: column;
-    height: 600px;
-    min-height: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
     gap: 5px;
-
     transition: all 0.1s ease-in-out;
+    min-height: 600px;
+  }
+
+  .MainBlock > * {
+    font-size: 24px;
+  }
+
+  .firstLineText {
+    display: none;
+  }
+  .secondLineText {
+    display: none;
+  }
+
+  .thirdLineText {
+    display: none;
+  }
+
+  .bigBlock {
+    display: none;
+  }
+
+  .actionButton {
+    display: none;
   }
 
   .games,
@@ -83,14 +176,17 @@
     min-height: auto;
   }
 
-  .closed span {
-    display: inline-block;
-    transform: rotate(0deg);
-  }
-}
+  @media (max-width: 480px) {
+    .MainBlock {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, 1fr);
+      gap: 5px;
+      transition: all 0.1s ease-in-out;
+      min-height: 600px;
+    }
 
-@media (min-width: 1920px) {
-  .MainBlock {
-    margin-top: 132px;
+    .games {
+      grid-row: span 1;
+    }
   }
 }
