--- a/client/src/components/WelcomeWords/WelcomeWords.module.css
+++ b/client/src/components/WelcomeWords/WelcomeWords.module.css
@@ -1,5 +1,6 @@
 .WelcomeWords {
   margin-bottom: 32px;
+  scroll-margin-top: 132px;
 }
 
 .WelcomeWords h1 {
@@ -25,6 +26,26 @@
   border-radius: 24px;
   width: 810px;
   height: 600px;
+}
+
+.stars {
+  display: grid;
+  grid-template-columns: repeat(1, 320px);
+  gap: 70px;
+  width: 100%;
+  height: fit-content;
+  font-size: 24px;
+  margin-bottom: 68px;
+
+  padding: 0;
+}
+
+.stars li {
+  padding-left: 56px;
+  list-style: none;
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-image: url('/public/icons/star.svg');
 }
 
 @media (max-width: 1600px) {
