--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -1,2 +1,26 @@
 .Auth {
+  display: flex;
+  flex-direction: column;
+  min-height: 50vh;
+}
+
+.form h2 {
+  padding: 1rem 0;
+  margin: 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 1rem;
+  max-width: 700px;
+
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.form button[type='submit']:disabled {
+  background-color: #eee;
+  cursor: default;
 }
